--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.version>4.13.2</junit.version>
     <servlet-api.version>2.5</servlet-api.version>
+    <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
   </properties>
 
   <dependencies>
@@ -34,6 +35,27 @@
       <version>${servlet-api.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector-java.version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.18.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.18.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
