--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <version>2.18.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <version>10.2.1.jre11</version>
+    </dependency>
   </dependencies>
 
   <build>
