--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-DB_URL=jdbc:mysql://localhost:3306/login_db?userSSL=false
+DB_URL=jdbc:mysql://localhost:3306/shopping?useSSL=false
 Username=root
 Password=123abc@A
