--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,11 @@
       <artifactId>glassfish-jstl</artifactId>
       <version>11.0.12</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220320</version>
+    </dependency>
   </dependencies>
 
   <build>
