--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,11 @@
       <version>${jakarta.servlet-api}</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.10.Final</version>
+    </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
