--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -10,7 +10,7 @@ filter.threshold.level = debug
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss.SSS}[%t] [%l] - %msg%n
+appender.console.layout.pattern =%d{yyyy-MM-dd HH:mm:ss.SSS}[%t] [%-5p] [%l] - %msg%n
 
 # RollingFileAppender name, pattern, path and rollover policy
 appender.rolling.type = RollingFile
