--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
       <artifactId>gson</artifactId>
       <version>2.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.10.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
